tests/baselines/reference/functionCall16.errors.txt
functionCall16.ts(2,12): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
functionCall16.ts(5,1): error TS2555: Expected at least 1 arguments, but got 0.
functionCall16.ts(6,5): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== functionCall16.ts (3 errors) ====
    function foo(a:string, b?:string, ...c:number[]){}
    foo('foo', 1); 
               ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo('foo'); 
    foo('foo', 'bar'); 
    foo();
    ~~~
!!! error TS2555: Expected at least 1 arguments, but got 0.
!!! related TS6210 functionCall16.ts:1:14: An argument for 'a' was not provided.
    foo(1, 'bar');
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo('foo', 'bar', 3);
    